# 05rust_chat-server

./: .env  Cargo.toml
chat_server/: Cargo.toml  app.yml  test.rest
chat_server/fixtures/: decoding.pem  encoding.pem  test.sql
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  message.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs  server_time.rs  server_time1.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs  mod.rs
migrations/: 20260120074525_initial.sql  20260128031640_workspace.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: lib.rs  main.rs  sse.rs
sql/: init.sql
