[workspace]
members = ["chat_server", "notify_server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["http2", "multipart", "query", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["postgres", "tls-rustls", "runtime-tokio", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
